intermediate commit for setting haplotype...not quite done yet...

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -63,7 +63,7 @@ add = Add
 nocopying = Unauthorised copying not permitted
 badfile = Unacceptable file submission
 clickremove = Click here to remove.
-addfile = Add new image or video file
+addfile = Add new image/video file
 removefile = Remove image\\video
 action = Action
 uppercaseEdit = Edit
@@ -193,3 +193,7 @@ addHaplotype = Add haplotype
 setHaplotype = Add/update haplotype
 haplotype = Haplotype
 analysisID = Analysis ID
+processingLabTaskID = Processing lab task ID
+processingLabName = Processing lab name
+processingLabContactName = Processing lab contact name
+processingLabContactDetails = Processing lab contact details
