create and update haplotype now complete.

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -187,7 +187,7 @@ collectionCode = Collection code
 datasetID = Dataset ID
 datasetName = Dataset name
 addTissueSample = Add tissue sample
-values = Values
+values = Attributes
 analyses = Analyses
 addHaplotype = Add haplotype
 setHaplotype = Add/update haplotype
