complete search by haplotype

--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -41,7 +41,7 @@ meters = meters
 locationNameContains = Location name contains
 leaveBlank = Leave blank to accept all locations in your search. This field IS NOT case-sensitive.
 locationID = Location ID is (select zero or more)
-locationIDExample = Leave blank to accept all locations in your search. You can select multiple location IDs.
+locationIDExample = Leave blank to accept all values in your search. You can select multiple values.
 submitterName = Submitter or photographer name or email address contains
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
 alternateID = Alternate ID is or includes
@@ -59,3 +59,5 @@ andLocationID = Require the marked individual to be sighted in all selected loca
 genusSpecies = Genus and species are
 lifeStage = Life stage was recorded at least once as 
 noStages = No stages are defined.
+haplotype: Haplotype is
+noHaplotypes = No haplotypes have been defined.
