--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -37,7 +37,7 @@ meters = meters
 locationNameContains = Location name contains
 leaveBlank = Leave blank to accept all locations in your search. This field IS NOT case-sensitive.
 locationID = Location ID is
-locationIDExample = Leave blank to accept all locations in your search. You can select multiple location IDs.
+locationIDExample = Leave blank to accept all values in your search. You can select multiple values.
 submitterName = Submitter or photographer name or email address contains
 namesBlank = Leave blank to accept all names in your search. This field IS NOT case-sensitive.
 alternateID = Alternate ID starts with
@@ -66,3 +66,5 @@ filenameField = Submitted filename is
 filenamesBlank = Leave blank to accept all filenames in your search. This field is case-sensitive.
 genusSpecies = Genus and species are
 lifeStage = Life stage is
+haplotype: Haplotype is
+noHaplotypes = No haplotypes have been defined.
