added first sighted in year feature (cherry-picking from commit 8e2bf455d9dbf1895e3fc06f43441f518f0aafd2)

--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -57,3 +57,4 @@ verbatimEventDate = Verbatim event date
 noLocationIDs = No location IDs have been defined.
 andLocationID = Require the marked individual to be sighted in all selected location IDs (i.e., select multi-site matches).
 genusSpecies = Genus and species are
+firstSightedInYear  = First sighted in year
