added first sighted in year feature

--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -61,3 +61,4 @@ lifeStage = Life stage was recorded at least once as
 noStages = No stages are defined.
 haplotype: Haplotype is
 noHaplotypes = No haplotypes have been defined.
+firstSightedInYear = First sighted in year
