interim persist point for ms marker feature

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -173,3 +173,6 @@ showSize = true
 #project-related variables
 application.version=${pom.version}
 
+#genetic parameters
+numLoci = 14
+numPloids = 2
