--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -387,6 +387,12 @@
     <servlet-class>org.ecocean.servlet.EncounterRemoveSpots</servlet-class>
   </servlet>
 
+
+  <servlet>
+    <servlet-name>TissueSampleSetMicrosatelliteMarkers</servlet-name>
+    <servlet-class>org.ecocean.servlet.TissueSampleSetMicrosatelliteMarkers</servlet-class>
+  </servlet>
+
   <servlet>
     <servlet-name>EncounterSetGPS</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterSetGPS</servlet-class>
@@ -540,6 +546,13 @@
       <servlet-name>TissueSampleSetHaplotype</servlet-name>
       <url-pattern>/TissueSampleSetHaplotype</url-pattern>
   </servlet-mapping>
+  
+  
+      <servlet-mapping>
+        <servlet-name>TissueSampleSetMicrosatelliteMarkers</servlet-name>
+        <url-pattern>/TissueSampleSetMicrosatelliteMarkers</url-pattern>
+  </servlet-mapping>
+  
   
       <servlet-mapping>
         <servlet-name>TissueSampleRemoveHaplotype</servlet-name>
