CRUD for ms marker works through the GUI!

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -190,6 +190,8 @@ addTissueSample = Add tissue sample
 values = Attributes
 analyses = Analyses
 addHaplotype = Add haplotype
+addMsMarkers = Add microsatellite markers
+setMsMarkers = Add/update microsatellite markers
 setHaplotype = Add/update haplotype
 haplotype = Haplotype
 analysisID = Analysis ID
@@ -197,3 +199,6 @@ processingLabTaskID = Processing lab task ID
 processingLabName = Processing lab name
 processingLabContactName = Processing lab contact name
 processingLabContactDetails = Processing lab contact details
+locus = Locus
+allele = Allele
+msMarkers = Microsatellite Markers
