Support measurements in EncounterSearch + some minor refactoring.

--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -68,3 +68,4 @@ genusSpecies = Genus and species are
 lifeStage = Life stage is
 haplotype: Haplotype is
 noHaplotypes = No haplotypes have been defined.
+measurements=Measurements
