added loci search and hasTissueSample search to Encounter Search...next up, add this to Individual Search and fix the filename search in Encounter Search

--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -66,6 +66,9 @@ filenameField = Submitted filename is
 filenamesBlank = Leave blank to accept all filenames in your search. This field is case-sensitive.
 genusSpecies = Genus and species are
 lifeStage = Life stage is
-haplotype: Haplotype is
+haplotype = Haplotype is
+msmarker = Has microsatellite marker loci
 noHaplotypes = No haplotypes have been defined.
+noLoci = No loci have been defined.
 measurements=Measurements
+hasTissueSample = Has tissue sample
