added ms marker searching for individuals

--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -62,3 +62,6 @@ noStages = No stages are defined.
 haplotype: Haplotype is
 noHaplotypes = No haplotypes have been defined.
 firstSightedInYear = First sighted in year
+msmarker = Has microsatellite marker loci
+noLoci = No loci have been defined.
+hasTissueSample = Has tissue sample
