Add support for sampling protocol on Measurement events.

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -163,6 +163,10 @@ measurementUnits1=meters
 measurement2=height
 measurementUnits2=meters
 
+#Sampling Protocol for Measurements
+samplingProtocol0=estimate
+samplingProtocol1=measure
+
 #show elevation/depth
 maximumElevationInMeters = true
 maximumDepthInMeters = true
