msmarker search with length relaxation

--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -72,3 +72,5 @@ noHaplotypes = No haplotypes have been defined.
 noLoci = No loci have been defined.
 measurements=Measurements
 hasTissueSample = Has tissue sample
+allele = Allele
+alleleRelaxValue = Relax allele length value by
