--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -65,3 +65,5 @@ firstSightedInYear = First sighted in year
 msmarker = Has microsatellite marker loci
 noLoci = No loci have been defined.
 hasTissueSample = Has tissue sample
+allele = Allele
+alleleRelaxValue = Relax allele length value by
