Add support for tags. Misc cleanup for measurements too.

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -181,3 +181,14 @@ application.version=${pom.version}
 numLoci = 14
 numPloids = 2
 alleleRelaxMaxValue = 5
+
+#tag parameters
+showMetalTags=true
+metalTagLocation0=left
+metalTagLocation1=right
+
+showAcousticTag=true
+
+showSatelliteTag=true
+satelliteTagName0=Wild Life Computers
+satelliteTagName1=SirTack
