--- a/pom.xml
+++ b/pom.xml
@@ -334,6 +334,7 @@
             <argument>target/classes/org/ecocean/package.jdo</argument>
             <argument>target/classes/org/ecocean/genetics/package.jdo</argument>
             <argument>target/classes/org/ecocean/grid/package.jdo</argument>
+            <argument>target/classes/org/ecocean/tag/package.jdo</argument>
           </arguments>
         </configuration>
         <executions>
