--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -202,3 +202,6 @@ processingLabContactDetails = Processing lab contact details
 locus = Locus
 allele = Allele
 msMarkers = Microsatellite Markers
+metalTags = Metal Tags
+satelliteTag = Satellite Tag
+acousticTag=Acoustic Tag
