Support for metal, acoustic, and satellite tags.

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -205,3 +205,6 @@ msMarkers = Microsatellite Markers
 metalTags = Metal Tags
 satelliteTag = Satellite Tag
 acousticTag=Acoustic Tag
+resetMetalTags=Reset Metal Tags
+resetAcousticTag=Reset Acoustic Tag
+resetSatelliteTag=Reset Satellite Tag
