Support for releaseDate

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -192,3 +192,8 @@ showAcousticTag=true
 showSatelliteTag=true
 satelliteTagName0=Wild Life Computers
 satelliteTagName1=SirTack
+
+#releaseDate
+showReleaseDate=true
+#Following releaseDateFormat must be readable by java.text.SimpleDateFormat
+releaseDateFormat=dd/MM/yyyy
