--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -208,3 +208,5 @@ acousticTag=Acoustic Tag
 resetMetalTags=Reset Metal Tags
 resetAcousticTag=Reset Acoustic Tag
 resetSatelliteTag=Reset Satellite Tag
+releaseDate=Release Date
+releaseDateFormat=Use format dd/mm/yyyy
