--- a/src/main/resources/bundles/en/submit.properties
+++ b/src/main/resources/bundles/en/submit.properties
@@ -26,6 +26,8 @@ submit_day = Day
 submit_month = Month
 submit_year = Year
 submit_time = Encounter time
+submit_releasedate = Release date
+submit_releasedate_format=Use format dd/mm/yyyy
 submit_length = Length
 submit_meters = Meters
 submit_feet = Feet
