--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -427,6 +427,11 @@
   </servlet>
   
   <servlet>
+        <servlet-name>EncounterSetReleaseDate</servlet-name>
+        <servlet-class>org.ecocean.servlet.EncounterSetReleaseDate</servlet-class>
+  </servlet>
+
+  <servlet>
     <servlet-name>EncounterSetMeasurements</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterSetMeasurements</servlet-class>
   </servlet>
@@ -631,6 +636,11 @@
       <servlet-mapping>
         <servlet-name>EncounterSetLifeStage</servlet-name>
         <url-pattern>/EncounterSetLifeStage</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+        <servlet-name>EncounterSetReleaseDate</servlet-name>
+        <url-pattern>/EncounterSetReleaseDate</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
