--- a/src/main/resources/bundles/en/submit.properties
+++ b/src/main/resources/bundles/en/submit.properties
@@ -20,7 +20,7 @@
 submit_title = Report a Sighting
 submit_report = Report an encounter
 submit_overview = Please use the online form below to record the details of your encounter. Be as accurate and specific as possible. Please note that by submitting data and images, you are granting unlimited usage of these materials for research and conservation purposes only.<font size=\"+1\"><em>*</em></font>
-submit_note_red = <font color=\"#000000\"><u><strong>Note</strong></u></font><font color=\"#CC0000\"><em>: The fields labelled in </em><strong>Red</strong><em> are required.</em></font> 
+submit_note_red = <font color=\"#000000\"><u><strong>Note</strong></u></font><font color=\"#CC0000\"><em>: The fields labeled in </em><strong>Red</strong><em> are required.</em></font> 
 submit_date = Encounter date
 submit_day = Day
 submit_month = Month
