display support for the genetic sex analysis

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -193,6 +193,7 @@ addHaplotype = Add haplotype
 addMsMarkers = Add microsatellite markers
 setMsMarkers = Add/update microsatellite markers
 setHaplotype = Add/update haplotype
+addGeneticSex = Add genetic sex determination
 haplotype = Haplotype
 analysisID = Analysis ID
 processingLabTaskID = Processing lab task ID
@@ -210,3 +211,5 @@ resetAcousticTag=Reset Acoustic Tag
 resetSatelliteTag=Reset Satellite Tag
 releaseDate=Release Date
 releaseDateFormat=Use format dd/mm/yyyy
+setSexAnalysis = Add/update genetic sex determination
+geneticSex = Genetic sex
