--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -74,3 +74,5 @@ measurements=Measurements
 hasTissueSample = Has tissue sample
 allele = Allele
 alleleRelaxValue = Relax allele length value by
+noGeneticSexes = No genetic sex analyses have been performed.
+geneticSex = Sex was determined from genetic analysis as
