--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -67,3 +67,5 @@ noLoci = No loci have been defined.
 hasTissueSample = Has tissue sample
 allele = Allele
 alleleRelaxValue = Relax allele length value by
+noGeneticSexes = No genetic sex analyses have been performed.
+geneticSex = Sex was determined from genetic analysis as
