--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -69,3 +69,5 @@ allele = Allele
 alleleRelaxValue = Relax allele length value by
 noGeneticSexes = No genetic sex analyses have been performed.
 geneticSex = Sex was determined from genetic analysis as
+measurements=Measurement was recorded at least once as
+metalTags=A metal tag was recorded at least once
