--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
     </dependency>
+    
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>0.9.18</version>
+    </dependency>
 
     <dependency>
       <groupId>commons-codec</groupId>
