--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1069,6 +1069,7 @@
       <url-pattern>/encounters/imageViewer.jsp</url-pattern>
       <url-pattern>/encounters/allEncountersUnapproved.jsp</url-pattern>
       <url-pattern>/appadmin/*</url-pattern>
+      <url-pattern>/logs/*</url-pattern>
 
     </web-resource-collection>
     <auth-constraint>
