--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -71,3 +71,5 @@ noGeneticSexes = No genetic sex analyses have been performed.
 geneticSex = Sex was determined from genetic analysis as
 measurements=Measurement was recorded at least once as
 metalTags=A metal tag was recorded at least once
+releaseDate=Release date
+releaseDateFormat=Use format dd/mm/yyyy
