adding GeneGIS flat file export capability

--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -78,3 +78,4 @@ noGeneticSexes = No genetic sex analyses have been performed.
 geneticSex = Sex was determined from genetic analysis as
 releaseDate=Release Date
 releaseDateFormat=Use format dd/mm/yyyy
+generateGeneGIS = Generate a GeneGIS CSV file for genetic-spatial analysis.
