--- a/src/main/resources/bundles/en/searchResults.properties
+++ b/src/main/resources/bundles/en/searchResults.properties
@@ -62,3 +62,4 @@ numResights = Number of resights
 vesselField = Vessel
 notAvailable = n/a
 taxonomy = Taxonomy
+exportedGeneGIS = GeneGIS CSV file export
