--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -297,6 +297,11 @@
         <servlet-class>org.ecocean.servlet.TissueSampleRemoveMicrosatelliteMarkers</servlet-class>
   </servlet>
 
+
+    <servlet>
+      <servlet-name>EncounterSearchExportGeneGISFormat</servlet-name>
+      <servlet-class>org.ecocean.servlet.EncounterSearchExportGeneGISFormat</servlet-class>
+  </servlet>
   <servlet>
     <servlet-name>EncounterSetTapirLinkExposure</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterSetTapirLinkExposure</servlet-class>
@@ -690,6 +695,11 @@
   </servlet-mapping>
   
     <servlet-mapping>
+      <servlet-name>EncounterSearchExportGeneGISFormat</servlet-name>
+      <url-pattern>/EncounterSearchExportGeneGISFormat</url-pattern>
+  </servlet-mapping>
+  
+    <servlet-mapping>
       <servlet-name>EncounterSetBehavior</servlet-name>
       <url-pattern>/EncounterSetBehavior</url-pattern>
   </servlet-mapping>
@@ -1048,6 +1058,7 @@
          <url-pattern>/EncounterRemoveImage</url-pattern>
          <url-pattern>/SinglePhotoVideoRemoveKeyword</url-pattern>
          <url-pattern>/SinglePhotoVideoAddKeyword</url-pattern>
+         <url-pattern>/EncounterSearchExportGeneGISFormat</url-pattern>
       <url-pattern>/CJS</url-pattern>
       <url-pattern>/software.jsp</url-pattern>
       <url-pattern>/interconnect/mac/Interconnect.jar</url-pattern>
