changing encounter state from the awkward approved and unidentifiable booleans over to a single Encounter.state variable. This is still hooked into the three traditional states (approved, unapproved, unidentifiable), but with the underpinnings changed, we can easily allow for config in the future without schema rework

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -194,3 +194,8 @@ satelliteTagName1=SirTack
 showReleaseDate=true
 #Following releaseDateFormat must be readable by java.text.SimpleDateFormat
 releaseDateFormat=dd/MM/yyyy
+
+#encounterState options, the precursors to future workflow
+encounterState0=unapproved
+encounterState1=approved
+encounterState2=unidentifiable
