--- a/src/main/resources/bundles/en/searchResults.properties
+++ b/src/main/resources/bundles/en/searchResults.properties
@@ -26,6 +26,7 @@ belowMatches = Below are encounters that matched your search. Click any column h
 rightClickLink = Right-click the link and save to your local hard drive.
 exportedExcel = Exported Excel spreadsheet (.xls) file
 exportedOBIS = Exported Excel spreadsheet (.xls) file in OBIS format
+exportedOBISLocales = Exported Excel spreadsheet (.xls) file in OBIS format with locale inclusion for unreported GPS
 exportedKML = Exported Google Earth KML file
 exportedEmail = Exported email data contributors file
 number = Number
@@ -63,3 +64,4 @@ vesselField = Vessel
 notAvailable = n/a
 taxonomy = Taxonomy
 exportedGeneGIS = GeneGIS CSV file export
+clickHere = Click here
