UI movement of exported search result for better visual consistency

--- a/src/main/resources/bundles/en/mappedSearchResults.properties
+++ b/src/main/resources/bundles/en/mappedSearchResults.properties
@@ -70,3 +70,4 @@ exportedKML = Exported Google Earth KML file
 exportedKMLTimeline = Exported Google Earth KML file with timeline
 exportedShapefile = Exported GIS shapefile
 clickHere = Click here
+exportOptions = Export Options
