--- a/src/main/resources/bundles/en/searchResults.properties
+++ b/src/main/resources/bundles/en/searchResults.properties
@@ -65,3 +65,4 @@ notAvailable = n/a
 taxonomy = Taxonomy
 exportedGeneGIS = GeneGIS CSV file export
 clickHere = Click here
+exportOptions = Export Options
