--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -135,5 +135,58 @@ showEXIF = true
 maximumElevationInMeters = false
 maximumDepthInMeters = true
 
+
+#show lifeStage
+showLifestage = false
+
+#defined life stages
+lifeStage0=juvenile
+lifeStage1=sub-adult
+lifeStage2=adult
+
+#show measurements
+showMeasurements = true
+
+#Measurements
+measurement0=disc width
+measurementUnits0=meters
+
+
+#Sampling Protocol for Measurements
+samplingProtocol0=personal guess
+samplingProtocol1=guess of guide/researcher
+samplingProtocol2=directly measured
+
+#show elevation/depth
+maximumElevationInMeters = false
+maximumDepthInMeters = true
+
+
 #project-related variables
-application.version=1.0.5-RELEASE
+application.version=shepherd-2.0.0-RELEASE
+
+#genetic parameters
+numLoci = 14
+numPloids = 2
+alleleRelaxMaxValue = 5
+
+#tag parameters
+showMetalTags=false
+metalTagLocation0=left
+metalTagLocation1=right
+
+showAcousticTag=true
+
+showSatelliteTag=true
+satelliteTagName0=Wild Life Computers
+satelliteTagName1=SirTack
+
+#releaseDate
+showReleaseDate=false
+#Following releaseDateFormat must be readable by java.text.SimpleDateFormat
+releaseDateFormat=dd/MM/yyyy
+
+#encounterState options, the precursors to future workflow
+encounterState0=unapproved
+encounterState1=approved
+encounterState2=unidentifiable
