--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -78,8 +78,8 @@ javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.jdo.JDOPersistenceManag
 datanucleus.ConnectionDriverName=org.postgresql.Driver
 datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/mantas2
 datanucleus.autoCreateSchema = true
-datanucleus.ConnectionUserName=FUZZ
-datanucleus.ConnectionPassword=FUZZ
+datanucleus.ConnectionUserName=matcher
+datanucleus.ConnectionPassword=q1w2e3r4t5
 datanucleus.NontransactionalRead = true
 datanucleus.Multithreaded = true
 datanucleus.RestoreValues = true
