--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -74,7 +74,7 @@ googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRQgRXet3y6wZebXyUrNwiCxW4Mr5BQWWJRA
 # these lines create a connection to a MySQL instances
 #datanucleus.ConnectionDriverName=com.mysql.jdbc.Driver
 #datanucleus.ConnectionURL=jdbc:mysql://localhost:3306/shepherd
-javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.jdo.JDOPersistenceManagerFactory
+javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.api.jdo.JDOPersistenceManagerFactory
 datanucleus.ConnectionDriverName=org.postgresql.Driver
 datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/mantas2
 datanucleus.autoCreateSchema = true
